# corpy

./: .editorconfig  .gitignore  .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  Makefile  Pipfile  README.rst  check.sh  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
blog/: blog_post.md  gen.py  resuming_iterator.py
corpy/: __init__.py  _magics.py  udpipe.py  util.py  vertical.py  vis.py
corpy/morphodita/: README.rst  __init__.py  tagger.py  tokenizer.py  util.py
corpy/phonetics/: README.rst  cs.py  cstrans.py  phones.tsv  substr2phones.tsv  tmp.tsv  voicing_pairs.tsv
corpy/scripts/: xc.py  zip_verticals.py
corpy/util/: __init__.py
corpy/vertical/: README.rst  __init__.py
corpy/vis/: README.rst  __init__.py
docs/: conf.py  index.rst  requirements.txt
docs/api/: morphodita.rst  phonetics_cs.rst  udpipe.rst  util.rst  vertical.rst  vis.rst
docs/api/morphodita/: tagger.rst  tokenizer.rst
docs/guides/: clean_env.rst  cli.rst  morphodita.rst  no_globals.rst  phonetics_cs.rst  udpipe.rst  util.rst  vertical.rst  vis.rst
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
slovko-23/: benchmark.sh  test.py
src/corpy/: __init__.py  _magics.py  udpipe.py  util.py  vertical.py
src/corpy/morphodita/: __init__.py  tagger.py  tokenizer.py
src/corpy/phonetics/: cs.py  exceptions.tsv  phones.tsv  voicing_pairs.tsv
src/corpy/scripts/: xc.py
tests/: fake_re.py  test_clean_env.py  test_morphodita.py  test_no_globals.py  test_phonetics.py  test_phonetics_regressions.py  test_phonetics_regressions.tsv  test_wordcloud.py
