[project]
name = "corpy"
readme = "README.rst"
description = "Tools for processing language data."
keywords = ["corpus", "linguistics", "NLP"]
authors = [
    {name = "David Lukes", email = "dafydd.lukes@gmail.com"},
]
license = {text = "GPL-3.0-or-later"}
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: Czech",
  "Natural Language :: English",
  "Natural Language :: Slovak",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Education",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]

# NOTE: When bumping the minimum Python, don't forget to bump it at the
# beginning of the README as well!
requires-python = ">=3.8"
dependencies = [
    # regex is versioned using calver plus it sticks to the API of stdlib's re
    # module, so whichever latest version is fine
    "regex",
    "lazy>=1.4",
    "lxml>=4.6.1",
    "wordcloud>=1.8.1",
    "ufal.morphodita>=1.10",
    "ufal.udpipe>=1.2",
    "numpy>=1.16",
    "click>=7.0",
]

[project.urls]
Documentation = "https://corpy.rtfd.io"
Issues = "https://github.com/dlukes/corpy/issues"
Source = "https://github.com/dlukes/corpy"

[project.scripts]
xc = "corpy.scripts.xc:main"
zip-verticals = "corpy.scripts.zip_verticals:main"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = {use_scm = true}

[tool.pdm.dev-dependencies]
dev = [
    "ipython",
    "ipdb",
    "pytest",
    "furo",
    "twine",
    "sphinx>=4.1.2",
]

[tool.pytest.ini_options]
addopts = '--quiet --doctest-modules --doctest-glob="*.rst" --ignore=__pypackages__'
filterwarnings = ['ignore:::^corpy\.?']
